--- a/back-office/templates/category/index.html.twig
+++ b/back-office/templates/category/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Category index{% endblock %}
 
 {% block body %}
-    <h1>Category index</h1>
+    <h1 class="title-page">Category</h1>
 
-    <table class="table">
+    <table class="table table-entity mt-3">
         <thead>
             <tr>
                 <th>Id</th>
@@ -21,8 +21,8 @@
                 <td>{{ category.name }}</td>
                 <td>{{ category.label }}</td>
                 <td>
-                    <a href="{{ path('category_show', {'id': category.id}) }}">show</a>
-                    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
+                    <a href="{{ path('category_show', {'id': category.id}) }}"><i class="fas fa-eye"></i></a>
+                    <a href="{{ path('category_edit', {'id': category.id}) }}"><i class="fas fa-edit"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('category_new') }}">Create new</a>
+    <a  class="btn btn-primary" href="{{ path('category_new') }}">+ Ajouter</a>
 {% endblock %}
