--- a/back-office/assets/styles/nav.scss
+++ b/back-office/assets/styles/nav.scss
@@ -1,5 +1,5 @@
 $white-color:                #FFFFFF !default;
-$info-color:                 #2CA8FF !default;
+$info-color:                 #007bff ;
 
 @mixin sidebar-color($color){
   &:after{
