--- a/back-office/templates/category/show.html.twig
+++ b/back-office/templates/category/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>Category</h1>
-
+    <h1 class="title-page">Catégorie</h1>
+    <a class="btn btn-primary" href="{{ path('category_index') }}">Retour à la liste</a>
+    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
     <table class="table">
-        <tbody>
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ category.id }}</td>
@@ -19,12 +20,13 @@
                 <th>Label</th>
                 <td>{{ category.label }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+        <div class="d-flex">
+            <a class="mt-3 col-7 mx-auto btn btn-success" href="{{ path('category_edit', {'id': category.id}) }}">Modifier</a>
 
-    <a href="{{ path('category_index') }}">back to list</a>
+        </div>
 
-    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('category/_delete_form.html.twig') }}
+        {{ include('category/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
