--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -1,71 +1,98 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Question{% endblock %}
+{% block title %}Ajouter une question{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('question') }} {% endblock %}
 
 {% block body %}
-    <h1>Create new Question</h1>
+    <h1 class="title-page">Ajouter une question</h1>
+    <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
+    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+        <form class="edit-question" action='{{ path('question_new', {id: question.id}) }}' method="post">
+            <label class="label-fs col-12" for="question-content">Question :</label>
+            <textarea class="col-12 col-xl-9 mx-auto rounded mb-3" id="question-content" name="question-content"
+                      required></textarea>
+            <fieldset>
 
-{#    {{ include('question/_form.html.twig') }}#}
+                <label class="label-fs" for="question-type-select">Type</label>
+                <div class="col-12">
+                    <ul>
+                        {% for type in questionTypes %}
+                            <li>
+                                <input type="checkbox" id="cbx-type-{{ type.name }}"
+                                       name="cbx-type-{{ type.name }}" value="{{ type.name }}">
+                                <label for="cbx-type-{{ type.name }}">{{ type|capitalize }}</label>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </fieldset>
+            <fieldset>
+                <label class="label-fs mt-3">Catégories</label>
+                <div class="col-12">
+                    <ul class="list-cb">
+                        {% for category in categories %}
+                            <li>
+                                <input type="checkbox" id="cbx-category-{{ category.name }}"
+                                       name="cbx-category-{{ category.name }}"
+                                       value="{{ category.name }}">
+                                <label for="cbx-category-{{ category.name }}">{{ category|capitalize }}</label>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </fieldset>
+            <fieldset>
+                <label class="label-fs mt-3">Réponses</label>
+                {% for i in 0..3 %}
+                    <div class="d-flex flex-wrap justify-content-between mt-2">
+                        <input class="col-12 col-sm-6" type="text" name="answers-content-{{ loop.index }}"
+                               id="answer-{{ loop.index }}"/>
 
-    <form action='{{ path('question_new', {id: question.id})}}' method="post">
-        <label for="question-content">Question :</label>
-        <textarea id="question-content" name="question-content" required></textarea>
-        <label for="question-type-select">Type</label>
-        {% for type in questionTypes %}
-            <input type="checkbox" id="cbx-type-{{ type.name }}"
-                       name="cbx-type-{{ type.name }}" value="{{ type.name }}">
-            <label for="cbx-type-{{ type.name }}">{{ type }}</label>
-        {% endfor %}
-        <div>
-            {% for category in categories %}
-                <input type="checkbox" id="cbx-category-{{ category.name }}" name="cbx-category-{{ category.name }}" value="{{ category.name }}">
-                <label for="cbx-category-{{ category.name }}">{{ category }}</label>
-            {% endfor %}
-        </div>
-        <p>Réponses</p>
-        {% for i in 0..3 %}
-            <div>
-                <input type="text" name="answers-content-{{ loop.index }}" id="answer-{{ loop.index }}"/>
+                        <input type="radio" id="good-answer-radio-{{ loop.index }}"
+                               name="answers-is_good_answer-{{ loop.index }}" value="1"/>
+                        <label for="good-answer-radio-{{ loop.index }}">Bonne</label>
 
-                <input type="radio" id="good-answer-radio-{{ loop.index }}" name="answers-is_good_answer-{{ loop.index }}" value="1"/>
-                <label for="good-answer-radio-{{ loop.index }}">Bonne réponse</label>
-
-                <input type="radio" id="bad-answer-radio-{{ loop.index }}" name="answers-is_good_answer-{{ loop.index }}" value="0"/>
-                <label for="bad-answer-radio-{{ loop.index }}">Mauvaise réponse</label>
+                        <input type="radio" id="bad-answer-radio-{{ loop.index }}"
+                               name="answers-is_good_answer-{{ loop.index }}" value="0"/>
+                        <label for="bad-answer-radio-{{ loop.index }}">Mauvaise</label>
+                    </div>
+                {% endfor %}
+            </fieldset>
+            <div class="mt-3 mb-3 d-flex flex-wrap">
+                <label class="label-fs col-12" for="additional-response_media-info">Information supplémentaire</label>
+                <textarea class="col-12 col-xl-9 mx-auto" name="additional-response_media-info"
+                          id="additional-response_media-info"
+                ></textarea>
             </div>
-        {% endfor %}
-        <div>
-            <label for="additional-response_media-info">Information supplémentaire</label>
-            <textarea name="additional-response_media-info"
-                      id="additional-response_media-info"
-            ></textarea>
-        </div>
-        {#        <div>#}
-        {#        TODO RESPONSE MEDIA FILE INPUT #}
-        {#        </div>#}
-        <div>
-            <label for="question-difficulty-select">Difficulté</label>
-            <select name="question-difficulty" id="question-difficulty-select">
-                {% for difficulty in questionDifficulty %}
-                    <option value="{{ difficulty }}">{{ difficulty }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div>
-            <label for="question-status-select">Statut</label>
-            <select name="question-status" id="question-status-select">
-                {% for status in questionStatuses %}
-                    <option value="{{ status }}">{{ status }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        {#        {% if question.customQuiz %}#}
-        {#        TODO handling when changing a question Position. The position of the question below and above should move
-                   consequently #}
-        {#        {% endif %}#}
-        <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
-        <button type="submit">Envoyer</button>
-    </form>
+            {#        <div>#}
+            {#        TODO RESPONSE MEDIA FILE INPUT #}
+            {#        </div>#}
+            <div class="d-flex flex-wrap">
+                <label class="col-6 label-fs" for="question-difficulty-select">Difficulté</label>
+                <select class="col-6" name="question-difficulty" id="question-difficulty-select">
+                    {% for difficulty in questionDifficulty %}
+                        <option value="{{ difficulty }}">{{ difficulty|capitalize }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="d-flex flex-wrap">
+                <label class="col-6 label-fs " for="question-status-select">Statut</label>
+                <select class="col-6" name="question-status" id="question-status-select">
+                    {% for status in questionStatuses %}
+                        <option value="{{ status }}">{{ status|capitalize }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            {#        {% if question.customQuiz %}#}
+            {#        TODO handling when changing a question Position. The position of the question below and above should move
+                       consequently #}
+            {#        {% endif %}#}
+            <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
+            <div class="d-flex">
+                <button class="mt-3 col-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+            </div>
+        </form>
 
-    <a href="{{ path('question_index') }}">back to list</a>
+    </div>
 {% endblock %}
+{% block javascripts %} {{ parent() }} {{ encore_entry_script_tags('question') }}{% endblock %}
