--- a/back-office/templates/question_type/edit.html.twig
+++ b/back-office/templates/question_type/edit.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Edit QuestionType{% endblock %}
 
 {% block body %}
-    <h1>Edit QuestionType</h1>
-
-    {{ include('question_type/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('question_type_index') }}">back to list</a>
-
-    {{ include('question_type/_delete_form.html.twig') }}
+    <h1 class="title-page">Modifier un type de question</h1>
+    <a class="btn btn-primary" href="{{ path('question_type_index') }}">Retour à la liste</a>
+    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+        {{ include('question_type/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('question_type/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
