--- a/back-office/templates/question_type/new.html.twig
+++ b/back-office/templates/question_type/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}New QuestionType{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('questionType') }}{% endblock %}
 
 {% block body %}
-    <h1>Create new QuestionType</h1>
-
-    {{ include('question_type/_form.html.twig') }}
-
-    <a href="{{ path('question_type_index') }}">back to list</a>
+    <h1 class="title-page">Ajouter un type de question</h1>
+    <a class="btn btn-primary" href="{{ path('question_type_index') }}">back to list</a>
+    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+        {{ include('question_type/_form.html.twig') }}
+    </div>
 {% endblock %}
+{% block javascripts %} {{ parent() }} {{ encore_entry_script_tags('questionType') }}{% endblock %}
