--- a/back-office/templates/user/_delete_form.html.twig
+++ b/back-office/templates/user/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form  class="d-flex" method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Delete</button>
+    <button class="mt-3 col-7 mx-auto btn btn-danger mx-auto">Supprimer</button>
 </form>
