--- a/back-office/templates/user/_form.html.twig
+++ b/back-office/templates/user/_form.html.twig
@@ -1,4 +1,49 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="col-12 d-flex flex-column mx-auto">
+    {{ form_label(form.username, 'Username') }}
+    {{ form_widget(form.username, {'attr': {'class': 'text-center'}}) }}
+</div>
+<div class="col-12 d-flex flex-column mx-auto mt-3">
+    {{ form_label(form.email, 'Email', {'label_attr': {'class': ''}}) }}
+    {{ form_widget(form.email, {'attr': {'class': 'text-center'}}) }}
+</div>
+{% if action is same as('new') %}
+    <div class="col-12 d-flex flex-column mx-auto mt-3">
+        {{ form_label(form.password, 'Mot de passe', {'label_attr': {'class': ''}}) }}
+        {{ form_widget(form.password, {'attr': {'class': 'text-center'}}) }}
+    </div>
+{% endif %}
+<div class="d-flex flex-wrap mt-3">
+    {{ form_label(form.plan, 'Plan', {'label_attr': {'class': 'col-4 label-fs'}}) }}
+    {{ form_widget(form.plan, {'attr': {'class': 'text-center col-4'}}) }}
+</div>
+<div class="d-flex flex-wrap mt-3">
+    {{ form_label(form.role, 'Rôle', {'label_attr': {'class': 'col-4 label-fs'}}) }}
+    {{ form_widget(form.role, {'attr': {'class': 'text-center col-4'}}) }}
+</div>
+<div class="d-flex col-12">
+    <div class="d-flex flex-wrap mt-3 col-3 pl-0">
+        {{ form_label(form.isTrustyWriter, 'Certifié', {'label_attr': {'class': 'pr-3 label-fs'}}) }}
+        {{ form_widget(form.isTrustyWriter) }}
+    </div>
+    <div class="d-flex flex-wrap mt-3 col-3">
+        {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'px-3 label-fs'}}) }}
+        {{ form_widget(form.isActive) }}
+    </div>
+    {% if action is same as('edit') %}
+        <div class="d-flex flex-wrap mt-3 col-3">
+            {{ form_label(form.isBanned, 'Ban', {'label_attr': {'class': 'px-3 label-fs'}}) }}
+            {{ form_widget(form.isBanned) }}
+        </div>
+    {% endif %}
+</div>
+{% if action is same as('edit') %}
+    <div class="d-flex flex-wrap mt-3">
+        {{ form_label(form.unbanDate, 'Date fin ban', {'label_attr': {'class': 'px-3 label-fs'}}) }}
+        {{ form_widget(form.unbanDate) }}
+    </div>
+{% endif %}
+<div class="d-flex">
+    <button class="mt-3 col-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+</div>
 {{ form_end(form) }}
