--- a/back-office/templates/user/new.html.twig
+++ b/back-office/templates/user/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
+    <h1 class="title-page">Ajouter un nouvel utilisateur</h1>
+    <a class="btn btn-primary" href="{{ path('user_index') }}">back to list</a>
+    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+        {{ include('user/_form.html.twig') }}
+    </div>
 {% endblock %}
