--- a/back-office/templates/user/show.html.twig
+++ b/back-office/templates/user/show.html.twig
@@ -3,10 +3,13 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1 class="title-page">QuestionType</h1>
+    <a class="btn btn-primary" href="{{ path('user_index') }}">Retour à la liste</a>
+    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center ">
 
-    <table class="table">
-        <tbody>
+
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ user.id }}</td>
@@ -67,12 +70,12 @@
                 <th>UpdatedAt</th>
                 <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+        <div class="d-flex">
+            <a class="mt-3 col-7 mx-auto btn btn-success" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
+        </div>
+        {{ include('user/_delete_form.html.twig') }}
+    </div>
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
