--- a/back-office/templates/include/sidebar.html.twig
+++ b/back-office/templates/include/sidebar.html.twig
@@ -38,6 +38,12 @@
                         <p>Utilisateurs</p>
                     </a>
                 </li>
+                <li id="sidebar-token" class="nav-items">
+                    <a href="{{ path('refresh_token_index') }}">
+                        <i class="fas fa-coins"></i>
+                        <p>Token</p>
+                    </a>
+                </li>
                 <li id="sidebar-logout" class="nav-items">
                     <a href="{{ path('app_logout') }}">
                         <i class="fas fa-sign-out-alt"></i>
