--- a/back-office/templates/question_type/index.html.twig
+++ b/back-office/templates/question_type/index.html.twig
@@ -34,7 +34,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">no records found</td>
+                <td colspan="7" class="no-result">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
