--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -56,7 +56,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="16">no records found</td>
+                <td colspan="16" class="no-result">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
