--- a/back-office/templates/category/index.html.twig
+++ b/back-office/templates/category/index.html.twig
@@ -27,7 +27,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4" class="no-result">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
