--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -94,7 +94,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="10">no records found</td>
+                <td colspan="10" class="no-result">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
