--- a/back-office/templates/refresh_token/edit.html.twig
+++ b/back-office/templates/refresh_token/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('refresh_token/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('refresh_token_index') }}">back to list</a>
+    <a href="{{ path('refresh_token_index') }}">retour à la liste</a>
 
     {{ include('refresh_token/_delete_form.html.twig') }}
 {% endblock %}
