--- a/back-office/templates/refresh_token/new.html.twig
+++ b/back-office/templates/refresh_token/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('refresh_token/_form.html.twig') }}
 
-    <a href="{{ path('refresh_token_index') }}">back to list</a>
+    <a href="{{ path('refresh_token_index') }}">retour à la liste</a>
 {% endblock %}
