--- a/back-office/templates/refresh_token/show.html.twig
+++ b/back-office/templates/refresh_token/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}RefreshToken{% endblock %}
 
 {% block body %}
-    <h1>RefreshToken</h1>
-
-    <table class="table">
-        <tbody>
+    <h1 class="title-page">Token</h1>
+    <a class="btn btn-primary" href="{{ path('refresh_token_index') }}">retour à la liste</a>
+    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Token</th>
                 <td>{{ refresh_token.token }}</td>
@@ -21,10 +22,8 @@
                     {{ refresh_token.user ? refresh_token.user.username : 'Guest' }}
                 </td>
             </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('refresh_token_index') }}">back to list</a>
-
-    {{ include('refresh_token/_delete_form.html.twig') }}
+            </tbody>
+        </table>
+        {{ include('refresh_token/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
